fix/hardware-gap

--- a/src/pages/smart-parking-v3/style.scss
+++ b/src/pages/smart-parking-v3/style.scss
@@ -192,7 +192,6 @@
           line-height: 24px;
           text-align: center;
           color: #454647;
-          white-space: nowrap;
         }
       }
     }
@@ -594,7 +593,7 @@
     }
     .hardware {
       width: 100%;
-      gap: clamp(18px, 1.25vw, 24px);
+      gap: clamp(40px, 3.125vw, 60px);
       display: flex;
       flex-direction: column;
       justify-content: center;
